[package]
name = "orderbook-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rust_decimal = "1.37.2"
itchy = "0.3"
clap = { version = "4.5.46", features = ["derive"] }
rand = "0.9.2"
rustc-hash = "2.1.1"
stable-vec = "0.4.1"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "bench_itch_orders"
harness = false
